--- a/enquire.html
+++ b/enquire.html
@@ -29,27 +29,29 @@
         </div>
         <div class="body">
             <div class="wrapper">
-                <div class="form-wrapper enquiry">
-                    <form actions="">
-                        <div class="input-group">
-                            <input type="text" required>
-                            <label for="">Your name</label>
-                        </div>
-                        <div class="input-group">
-                            <input type="text" required>
-                            <label for="">email</label>
-                        </div>
-                        <div class="input-group">
-                            <input type="number" required>
-                            <label for="">Phone Number</label>
-                        </div>
-                        <div class="input-group">
-                            <input type="text" required>
-                            <label for="">Enquiries</label>
-                        </div>
-                        <button type="submit">Submit</button>
-                    </form>
-                </div>
+    <div class="form-wrapper enquiry">
+        <form action="https://formspree.io/f/mnnokzjl" method="POST">
+            <h2>Get in Touch</h2>
+            <div class="input-group">
+                <input type="text" name="name" required>
+                <label for="">Your Name</label>
+            </div>
+            <div class="input-group">
+                <input type="email" name="email" required>
+                <label for="">Email</label>
+            </div>
+            <div class="input-group">
+                <input type="tel" name="phone" required>
+                <label for="">Phone Number</label>
+            </div>
+            <div class="input-group">
+                <input type="email" name="Enquiries" required>
+                <label for="">Enquiries</label>
+            </div>
+            <button type="submit">Send Message</button>
+        </form>
+    </div>
+</div>
             </div>
         </div>
 
@@ -60,7 +62,7 @@
                 <div class="footer-col">
                     <h4>Contact us</h4>
                     <ul> 
-                        <li><a href="tel:+0720664782">Call now [011 111 1111]</a></li> <!--Turn to contact number-->
+                        <li><a href="tel:+0720664782">Call now [011 678 1234]</a></li> <!--Turn to contact number-->
                         <li><a href="email">NookCafe@gmail.com</a></li>
                         <p class="copyright">&copy; copyright reserved</p>
                     </ul>
@@ -69,9 +71,7 @@
                 <div class="footer-col">
                     <h4>Locations</h4>
                     <ul>
-                        <li><a href="locations">Meyersdal</a></li> 
-                        <li><a href="locations">Pretoria</a></li> 
-                        <li><a href="locations">Bloemfontein</a></li> 
+                        <li><a href="https://www.google.com/maps/place/Sandton+City+Office+Towers/@-26.1079468,28.0537605,17z/data=!4m14!1m7!3m6!1s0x1e957334662cb431:0x484917656444f4d5!2sSandton+City+Office+Towers!8m2!3d-26.1079468!4d28.0537605!16s%2Fg%2F11nx0lq570!3m5!1s0x1e957334662cb431:0x484917656444f4d5!8m2!3d-26.1079468!4d28.0537605!16s%2Fg%2F11nx0lq570?entry=ttu&g_ep=EgoyMDI1MDkxNy4wIKXMDSoASAFQAw%3D%3D">Sandton</a></li> 
                     </ul>
                 </div>
   
@@ -80,7 +80,6 @@
                     <h4>Follow us</h4>
                     <div class="social-links">
                         <a href=""><i class="fab fa-instagram"></i></a>
-                        <a href=""><i class="fab fa-facebook"></i></a>
                     </div>
                 </div>
   
