--- a/gaming.html
+++ b/gaming.html
@@ -1,80 +1,64 @@
-<!--Tabs for each section with images and information about each section. also including games available-->
-
-<!--Input a button to take the user to enquire page to place booking-->
-
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <link rel="icon" type = "image/png" href="assets/NCLogo.png">
-        <title>Gaming Info | Nook Cafe</title>
-        <!--Like stylesheets-->
-        <!--Homestyle-->
-        <link rel="stylesheet" href="css/gaming.css">
-        <!--Header-->
-        <link rel="stylesheet" href="css/header.css">
-        <!--Footer-->
-        <link rel="stylesheet" href="css/footer.css">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script>
+  <head>
+    <link rel="icon" type="image/png" href="assets/NCLogo.png">
+    <title>Gaming Info | Nook Cafe</title>
 
-            $(function() {
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="css/gaming.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  </head>
 
-                $(".toggle").on("click", function(){
+  <body>
+    <!-- Header -->
+    <header>
+      <a href="index.html">
+        <img class="logoimg" src="assets/NCLogo.png" alt="logoimg" />
+      </a>
+      <li class="logo">
+        <a class="a-header" href="index.html">Nook Cafe</a>
+      </li>
+      <nav>
+        <ul class="NavOptions">
+          <li class="item">
+            <a class="a-header" href="gaming.html" target="_blank">Video game section</a>
+          </li>
+          <li class="item">
+            <a class="a-header" href="cafe.html" target="_blank">Cafe menu</a>
+          </li>
+          <li class="item button">
+            <a class="a-header" href="enquire.html" target="_blank">Enquire</a>
+          </li>
+          <li class="toggle"><a href="#"><span class="bars"></span></a></li>
+        </ul>
+      </nav>
+    </header>
 
-                    if($(".item").hasClass("active")){
-                        $(".item").removeClass("active");
-                    }
-                    else{
-                        $(".item").addClass("active");
-                    }
-                })
-            });
+    <hr class="custom-hr" />
 
-        </script>
-    
-    </head>
+    <!-- Main Content -->
+    <main class="courses-container">
+      <!-- Sidebar -->
+      <aside class="sidebar">
+        <div class="category">Gaming Section</div>
+        <ul>
+          <li><a href="#" onclick="showCourses('PC-Gaming')">PC Gaming</a></li>
+          <li><a href="#" onclick="showCourses('Console-Gaming')">Console Gaming</a></li>
+          <li><a href="#" onclick="showCourses('VR-Gaming')">VR Gaming</a></li>
+        </ul>
+      </aside>
 
-    <!--Body-->
-
-        <body>
-
-        <!--header Section-->
-        <header>
-            <a href="index.html"><img class="logoimg" src="assets/NCLogo.png" alt="logoimg"></a>     <!--Insert logo image-->
-            <li class="logo"><a class="a-header" href="index.html">Nook Cafe</a></li>
-        <nav>
-            <ul class="NavOptions">
-                <li class="item"><a class="a-header" href="gaming.html">Video game section</a></li>
-                <li class="item"><a class="a-header" href="cafe.html" >Cafe menu</a></li>
-                <li class="item"><a class="a-header" href="enquire.html" >Enquire</a></li>
-                <li class="item button"><a class="a-header" href="Login.html">login</a></li>
-                <li class="item button secondary"><a class="a-header" href="signUp.html">Sign up</a></li>
-                <li class="toggle"><a href="#"><span class="bars"></span></a></li>
-            </ul>
-        </nav>
-        </header>
-        <hr class="custom-hr">
-
-        <!--Tabs section-->
-
-        <main class="courses-container">
-            <!--Sidebar with course list-->
-            <aside class="sidebar">
-                <div class="category">Gaming Section</div>
-                <ul>
-                    <li><a href="#" onclick="showCourses('PC-Gaming')">PC Gaming</a></li>
-                    <li><a href="#" onclick="showCourses('Console-Gaming')">Console Gaming</a></li>
-                    <li><a href="#" onclick="showCourses('VR-Gaming')">VR Gaming</a></li>
-                </ul>
-            </aside>
-
-            <!--Section info area-->
-            <section class="course-info">
-
-                <!--PC SPECIFICATIONS (Default visible)-->
-                <div id="PC-Gaming" class="course-detail active">
+      <!-- Section Info -->
+      <section class="course-info">
+        <!-- PC Gaming -->
+        <div id="PC-Gaming" class="course-detail active">
                     <img id="pcimg" src="assets/pcPage.jpeg" alt="PC gaming area">
                     <h2>PC Gaming</h2>
                     <p>
@@ -116,8 +100,9 @@
                     </ul>
                 </div>
 
-                <!--CONSOLE SECTION-->
-                <div id="Console-Gaming" class="course-detail">
+
+        <!-- Console Gaming -->
+        <div id="Console-Gaming" class="course-detail">
                     <img id="consoleimg"  class="Consoleimg" src="assets/consolepage.jpeg" alt="Consoleimg">
                     <h2> Console Gaming</h2>
                     <p>
@@ -166,8 +151,8 @@
                     </ul>
                 </div>
 
-                <!--VR SECTION-->
-                <div id="VR-Gaming" class="course-detail">
+        <!-- VR Gaming -->
+        <div id="VR-Gaming" class="course-detail">
                     <img id="vrimg" class="VRimg" src="assets/VRpage.jpeg" alt="VRimg">
                     <h2> VR Gaming</h2>
                     <p>
@@ -205,55 +190,73 @@
                         <li>R70 per person for birthday events</li>
                     </ul>
                 </div>
-            </section>
-        </main>
+      </section>
+    </main>
 
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col">
+            <h4>Contact us</h4>
+            <ul>
+              <li><a href="tel:+0720664782">Call now [011 678 1234]</a></li>
+              <li><a href="mailto:NookCafe@gmail.com">NookCafe@gmail.com</a></li>
+              <p class="copyright">&copy; copyright reserved</p>
+            </ul>
+          </div>
 
-                <!--Footer Section-->
-        <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <h4>Contact us</h4>
-                    <ul> 
-                        <li><a href="tel:+0720664782">Call now [011 111 1111]</a></li> <!--Turn to contact number-->
-                        <li><a href="email">NookCafe@gmail.com</a></li>
-                        <p class="copyright">&copy; copyright reserved</p>
-                    </ul>
-                </div>
-  
-                <div class="footer-col">
-                    <h4>Locations</h4>
-                    <ul>
-                        <li><a href="locations">Meyersdal</a></li> 
-                        <li><a href="locations">Pretoria</a></li> 
-                        <li><a href="locations">Bloemfontein</a></li> 
-                    </ul>
-                </div>
-  
-  
-                <div class="footer-col">
-                    <h4>Follow us</h4>
-                    <div class="social-links">
-                        <a href=""><i class="fab fa-instagram"></i></a>
-                        <a href=""><i class="fab fa-facebook"></i></a>
-                    </div>
-                </div>
-  
+          <div class="footer-col">
+            <h4>Locations</h4>
+            <ul>
+              <li>
+                <a
+                  href="https://www.google.com/maps/place/Sandton+City+Office+Towers/"
+                  target="_blank"
+                >
+                  Sandton
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-col">
+            <h4>Follow us</h4>
+            <div class="social-links">
+              <a href="https://www.instagram.com/nookcafe6" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
             </div>
+          </div>
         </div>
+      </div>
     </footer>
 
+    <!-- Scripts -->
     <script>
-        function showCourses(courseId) {
-            //hide all course details
-            document.querySelectorAll('.course-detail').forEach(function(div) {
-                div.classList.remove('active');
-            });
-            //Show only the clicked one
-            document.getElementById(courseId).classList.add('active');
+      // Hamburger Menu Toggle
+      document.addEventListener("DOMContentLoaded", function () {
+        const toggle = document.querySelector(".toggle");
+        const items = document.querySelectorAll(".item");
+        if (toggle) {
+          toggle.addEventListener("click", function (e) {
+            e.preventDefault();
+            items.forEach((item) => item.classList.toggle("active"));
+          });
         }
-    </script>
+      });
 
-    </body>
+      // Sidebar Section Switch
+      function showCourses(id) {
+        const allSections = document.querySelectorAll(".course-detail");
+        allSections.forEach((section) => section.classList.remove("active"));
+
+        const activeSection = document.getElementById(id);
+        if (activeSection) {
+          activeSection.classList.add("active");
+          activeSection.scrollIntoView({ behavior: "smooth", block: "start" });
+        }
+      }
+    </script>
+  </body>
 </html>
